Add real implementation of /git-external-to-internal